--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "homepage": "https://github.com/Vaztonyo/greetings-webapp#readme",
   "dependencies": {
-    "express": "^4.15.3"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "express-handlebars": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
