--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "keywords": [
     "greet/greeted"
   ],
+  "engines": {
+    "node": "8.3.0"
+  },
   "author": "Vaztonyo",
   "license": "ISC",
   "bugs": {
@@ -24,7 +27,8 @@
     "express": "^4.15.3",
     "express-flash": "git://github.com/RGBboy/express-flash.git",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.5"
+    "express-session": "^1.15.5",
+    "node": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
